# VRP-EA-optimization

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
data/: sample_vrp.txt
docs/: requiremnets.md
include/: genetic_algorithm.hpp  vrp.hpp
scripts/: plot_results.py
src/: genetic_algorithm.cpp  main.cpp  vrp.cpp
test/: ortools_calculate_solution.py
